--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,11 +1,11 @@
 /* HomePage.css */
 
 /* Import Google Font */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 /* General Styles */
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f7f7f7;
@@ -128,7 +128,7 @@ body {
   color: white;
   text-align: center;
   width: 100%;
-  margin-bottom: 2rem;;
+  margin-bottom: 2rem;
 }
 
 .cta-section h2 {
